// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetTreeInspector prepare currentSource test component snapshot else 1`] = `
<article
  className="inspector-component"
>
  <article
    className="inspector-component"
  >
    <div
      className=""
    >
      <h1>
        Folder
      </h1>
      <hr />
      <span
        className=""
      >
        name:
      </span>
      <input
        className="input-component float-input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="folder1"
      />
    </div>
  </article>
</article>
`;

exports[`AssetTreeInspector prepare currentSource test component snapshot if hasn't currentAssetTreeNode, show nothing 1`] = `
<article
  className="inspector-component"
/>
`;

exports[`AssetTreeInspector prepare currentSource test component snapshot if hasn't currentTreeNode, show nothing 1`] = `
<article
  className="inspector-component"
/>
`;

exports[`AssetTreeInspector prepare currentSource test rename treeNode deal with specific case key in '', trigger onBlur, the input value should be primitive name 1`] = `
<article
  className="inspector-component"
>
  <div
    className=""
  >
    <h1>
      Folder
    </h1>
    <hr />
    <span
      className=""
    >
      name:
    </span>
    <input
      className="input-component float-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="folder2"
    />
  </div>
</article>
`;

exports[`AssetTreeInspector prepare currentSource test rename treeNode test not rename 1`] = `
<article
  className="tree-content"
>
  <ul
    className="wonder-tree-node"
  >
    <li
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <img
        src="./public/img/12.jpg"
      />
      asset
    </li>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "background": "red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder1
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder2
      </li>
    </ul>
  </ul>
</article>
`;

exports[`AssetTreeInspector prepare currentSource test rename treeNode test rename to specific name 1`] = `
<article
  className="tree-content"
>
  <ul
    className="wonder-tree-node"
  >
    <li
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <img
        src="./public/img/12.jpg"
      />
      asset
    </li>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        folder1
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
      draggable={true}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    >
      <li
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "background": "red",
          }
        }
      >
        <img
          src="./public/img/12.jpg"
        />
        mickeyFolder
      </li>
    </ul>
  </ul>
</article>
`;

exports[`AssetTreeInspector prepare currentSource test rename treeNode test the root folder can't be rename the root treeNode rename-input disabled should be true 1`] = `
<article
  className="inspector-component"
>
  <div
    className=""
  >
    <h1>
      Folder
    </h1>
    <hr />
    <span
      className=""
    >
      name:
    </span>
    <input
      className="input-component float-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="asset"
    />
  </div>
</article>
`;
